# cricketpy

./: .gitignore  README.md  countries.py  fetch_cricinfo.py  fetch_cricket_info.py  fetch_cricsheet.py  helpers.py  pyproject.toml
.github/: pull_request_template.md
