[tool.poetry]
name = "cricketpy"
version = "0.1.0"
description = "Python replication of cricketdata R package"
authors = ["Brandon Hao <brandonhao25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
bs4 = "^0.0.2"
requests = "^2.32.3"
pathlib = "^1.0.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
